k8s/dp-hello-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web
spec:
    replicas: 4
    selector:
        matchLabels:
            env: prod
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                env: prod
        spec:
            containers:
              - name: hello-app
                image: gcr.io/google-samples/hello-app:1.0
                ports:
                - containerPort: 8080
                resources:
                  limits:
                    memory: 512Mi
                    cpu: "1"
                  requests:
                    memory: 256Mi
                    cpu: "0.2"
