k8s/svc-testwebapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: testwebapp
spec:
  type: ClusterIP
  selector:
    app: testwebapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
